made some spacing fixes

--- a/assets/stylesheets/components/home-case-one.scss
+++ b/assets/stylesheets/components/home-case-one.scss
@@ -14,7 +14,7 @@
       "a a a a a a a a a a a a"
       "c c b b b b b b b b b b";
     grid-template-columns: repeat(12, 1fr);
-    margin-top: unset;
+    margin-top: 10vw;
   }
 }
 
