--- a/assets/stylesheets/components/home-case-two.scss
+++ b/assets/stylesheets/components/home-case-two.scss
@@ -17,7 +17,7 @@
       ". . . . . . b b b b b b"
       "c c c c c c c c c c c c";
     grid-template-columns: repeat(12, 1fr);
-    margin-top: unset;
+    margin-top: 10vw;
   }
 }
 
